- Corrected and aligned elements in page - Fixed date slider range bar

--- a/src/main/webapp/resources/css/mapStyle.css
+++ b/src/main/webapp/resources/css/mapStyle.css
@@ -64,8 +64,9 @@ a:hover tspan:last-child {
 }
 
 #dateSelectorSlider {
-    width: 1580px;
-    margin-bottom: 10px;
+    margin-bottom: 1%;
+    width: 98%;
+    margin-left: 0.5%;
 }
 
 #staticViolationsPage {
@@ -84,37 +85,37 @@ g.node:hover circle {
 
 #total {
     width: 100%;
-    height: 79%;
+    height: 77%;
 }
 
 #user {
     width: 100%;
-    height: 79%;
+    height: 77%;
 }
 
 #add-delete {
     width: 100%;
-    height: 79%;
+    height: 77%;
 }
 
 #loc {
     width: 100%;
-    height: 79%;
+    height: 77%;
 }
 
 #periodoftime {
     width: 100%;
-    height: 79%;
+    height: 77%;
 }
 
 #v-pills-aa-spof {
     width: 100%;
-    height: 76%;
+    height: 75%;
 }
 
 #v-pills-aa-conglomerate {
     width: 100%;
-    height: 76%;
+    height: 75%;
 }
 
 #add-delete svg {
